# vavavult

./: .cursorrules  .gitlab-ci.yml  Cargo.toml  README.md  README_zh-CN.md  llm_log.py  llm_log.txt  llm_readme.md  llm_readme.txt
.github/workflows/: rust.yml
.llm_log/: llm_log_000400.txt  llm_log_000401.txt  llm_log_000500.txt
docs/: Changelog.md  RoadMap.md  TODO.md  TODO_finished.md  build_setup.md  vavavult_cli_architecture.md  vavavult_core_architecture.md  vavavult_mount_architecture.md
vavavult/: Cargo.toml
vavavult/examples/: advanced_usage.rs  advanced_usage_zh_cn.rs  basic_usage.rs  basic_usage_zh_cn.rs
vavavult/src/: lib.rs  util.rs
vavavult/src/common/: constants.rs  hash.rs  metadata.rs  mod.rs
vavavult/src/crypto/: chunked.rs  encrypt.rs  mod.rs  stream_cipher.rs
vavavult/src/extension/: colorful_tag.rs  mod.rs
vavavult/src/file/: encrypt.rs  mod.rs  path.rs  stream_cipher.rs
vavavult/src/storage/: chunked.rs  local.rs  mod.rs
vavavult/src/tests/: add_test.rs  create_test.rs  mod.rs  query_test.rs  remove_test.rs  update_test.rs  vault_test.rs
vavavult/src/utils/: hash.rs  mod.rs  path.rs  random.rs  time.rs
vavavult/src/vault/: add.rs  common.rs  config.rs  create.rs  extract.rs  fix.rs  metadata.rs  mod.rs  open.rs  path_ops.rs  query.rs  rekey.rs  remove.rs  tags.rs  update.rs  verify.rs
vavavult/tests/: db_first_metadata.rs  file_operations.rs  fix_test.rs  metadata_tags.rs  path_operations.rs  rekey_test.rs  remove_test.rs  storage_backend.rs  vault_lifecycle.rs  vault_test.rs  vault_test_v2.rs
vavavult/tests/common/: mod.rs
vavavult_cli/: Cargo.toml
vavavult_cli/src/: cli.rs  errors.rs  main.rs  utils.rs
vavavult_cli/src/core/: helpers.rs  mod.rs
vavavult_cli/src/handlers/: add.rs  copy.rs  extract.rs  list.rs  mod.rs  mount.rs  move_cl.rs  open.rs  passwd.rs  remove.rs  rename.rs  search.rs  status.rs  tag.rs  vault.rs  verify.rs
vavavult_cli/src/repl/: dispatcher.rs  mod.rs  state.rs
vavavult_cli/src/ui/: formatter.rs  mod.rs  printer.rs  prompt.rs
vavavult_cli/tests/: cli_integration_test.rs  commands.rs  integration_test.rs
vavavult_cli/tests/common/: mod.rs
vavavult_mount/: Cargo.toml
vavavult_mount/src/: auth.rs  config.rs  error.rs  lib.rs  server.rs  sys_mount.rs
vavavult_mount/src/vfs/: mod.rs  node.rs
