[workspace]
members = [
    "vavavult", "vavavult_cli",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = { version = "4.5.40", features = ["derive"] }
tempfile = "3.20.0"
hex = "0.4.3"
sha2 = "0.11.0-rc.0"
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher"] }
openssl = { version = "0.10.73", features = ["vendored"] }
serde_rusqlite = "0.40.0"
