[workspace]
members = [
    "vavavult", "vavavult_cli",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.18.0"
opener = "0.8.2"
openssl = { version = "0.10.73", features = ["vendored"] }
predicates = "3.1"
rayon = "1.11"
rpassword = "7.4"
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher"] }
rustyline = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.40.0"
sha2 = "0.11.0-rc.0"
shlex = "1.3"
tempfile = "3.21"
thiserror = "2.0"
walkdir = "2.5"
