[package]
name = "vavavult"
version = "0.2.1"
edition = "2024"
license = "LGPL-2.1"
authors = ["takuron <takuron@163.com>"] # 请替换为您的邮箱
repository = "https://github.com/takuron/vavavult" # 请替换为您的仓库地址

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
openssl = { workspace = true }
serde_rusqlite = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
