[package]
name = "vavavult_cli"
version = "0.4.0"
edition = "2024"

# 显式指定二进制产物的名称和路径
[[bin]]
name = "vavavult"
path = "src/main.rs"

[dependencies]

vavavult = { path = "../vavavult" }

# 从工作区继承 clap 的配置
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }

# 添加 rustyline 用于创建交互式 Shell
rustyline = "17.0.1"
# 添加 rpassword 用于安全地读取密码
rpassword = "7.4.0"
shlex = "1.3.0"
walkdir = "2.5.0"
opener = "0.8.2"
indicatif = "0.18.0"
rayon = "1.11.0"

thiserror = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3.21.0"

