[package]
name = "vavavult_cli"
version = "0.4.0"
edition = "2024"

# 显式指定二进制产物的名称和路径
[[bin]]
name = "vavavult"
path = "src/main.rs"

[dependencies]

vavavult = { path = "../vavavult" }

# 从工作区继承 clap 的配置
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }

# 添加 rustyline 用于创建交互式 Shell
rustyline = { workspace = true }
# 添加 rpassword 用于安全地读取密码
rpassword = { workspace = true }
shlex = { workspace = true }
walkdir = { workspace = true }
opener = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }

thiserror = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
anyhow = { workspace = true }
