[package]
name = "vavavult_mount"
version = "0.1.0"
edition = "2024"

[dependencies]
dav-server = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
vavavult = { path = "../vavavult" }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
base64 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
